--- a/book/index.html
+++ b/book/index.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html" class="active">Home</a></li><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> What is Bittensor?</a></li><li class="chapter-item expanded "><a href="generate_signature.html"><strong aria-hidden="true">2.</strong> Validator Signature</a></li><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">3.</strong> ReadMe</a></li><li class="chapter-item expanded "><a href="verify_signature.html"><strong aria-hidden="true">4.</strong> Verify Validator</a></li><li class="chapter-item expanded "><a href="gating_model.html"><strong aria-hidden="true">5.</strong> Gating Model</a></li><li class="chapter-item expanded "><a href="neuron.html"><strong aria-hidden="true">6.</strong> Neurons</a></li><li class="chapter-item expanded "><a href="rewards.html"><strong aria-hidden="true">7.</strong> Model Testing</a></li><li class="chapter-item expanded "><a href="client_commands.html"><strong aria-hidden="true">8.</strong> All the commands, but explained!</a></li><li class="chapter-item expanded "><a href="Bittensor_Init.html"><strong aria-hidden="true">9.</strong> Synopsis of Bittensor Code</a></li><li class="chapter-item expanded "><a href="core_validator_init.html"><strong aria-hidden="true">10.</strong> Core Validator Explanation</a></li><li class="chapter-item expanded "><a href="epochs.html"><strong aria-hidden="true">11.</strong> What's an Epoch?</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="before_you_build.html"><strong aria-hidden="true">1.1.</strong> Before You Build</a></li><li class="chapter-item expanded "><a href="linux_basics.html"><strong aria-hidden="true">1.2.</strong> Linux Basics</a></li><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.3.</strong> ReadMe</a></li></ol></li><li class="chapter-item expanded "><a href="generate_signature.html"><strong aria-hidden="true">2.</strong> Information for Validation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="verify_signature.html"><strong aria-hidden="true">2.1.</strong> Verify Validator</a></li><li class="chapter-item expanded "><a href="gating_model.html"><strong aria-hidden="true">2.2.</strong> Gating Model</a></li><li class="chapter-item expanded "><a href="neuron.html"><strong aria-hidden="true">2.3.</strong> Neurons</a></li><li class="chapter-item expanded "><a href="core_validator_init.html"><strong aria-hidden="true">2.4.</strong> Core Validator Explanation</a></li></ol></li><li class="chapter-item expanded "><a href="rewards.html"><strong aria-hidden="true">3.</strong> Mining</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="client_commands.html"><strong aria-hidden="true">3.1.</strong> All the commands, but explained!</a></li><li class="chapter-item expanded "><a href="bittensor_init.html"><strong aria-hidden="true">3.2.</strong> Synopsis of Bittensor Code</a></li><li class="chapter-item expanded "><a href="epochs.html"><strong aria-hidden="true">3.3.</strong> What's an Epoch?</a></li><li class="chapter-item expanded "><a href="miner_commands.html"><strong aria-hidden="true">3.4.</strong> Miner Commands</a></li><li class="chapter-item expanded "><a href="miner_analysis.html"><strong aria-hidden="true">3.5.</strong> Analysis of a Miner Template</a></li><li class="chapter-item expanded "><a href="register_cuda.html"><strong aria-hidden="true">3.6.</strong> Cuda PoW</a></li></ol></li><li class="chapter-item expanded "><a href="dataset_impl.html"><strong aria-hidden="true">4.</strong> Data</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="dataset_mock.html"><strong aria-hidden="true">4.1.</strong> Mock DataSet</a></li></ol></li><li class="chapter-item expanded "><a href="networking.html"><strong aria-hidden="true">5.</strong> Networking</a></li><li class="chapter-item expanded "><a href="registration.html"><strong aria-hidden="true">6.</strong> Registration</a></li><li class="chapter-item expanded "><a href="axon_init.html"><strong aria-hidden="true">7.</strong> Axons</a></li><li class="chapter-item expanded "><a href="prometheus_init.html"><strong aria-hidden="true">8.</strong> Monitoring</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -146,7 +146,7 @@
                     <main>
                         <p>Hi, this is a community project supported by members of the Bittensor community.</p>
 <p>In collaboration with community members on the Bittensor Network, as well by harnessing my own intellect, I have now begun to give detailed examples of what exactly is going on when we call the various functions of the Bittensor network. </p>
-<p>Along with this, I have included further documentation and instruction on what linux commands you will want to know, as well as how to navigate through Unix/the basics of what you'll need to know about going forward if you are to build on the Bittensor Network. </p>
+<p>Along with this, I have included further documentation and instruction on what Linux commands you will want to know, as well as how to navigate through Unix/the basics of what you'll need to know about going forward if you are to build on the Bittensor Network. </p>
 <p>The objective here is to dissect and analyze the knowledge found within Bittensor so that we may educate those who do not know, but in a way that's more translatable to the average person. </p>
 <p>Although it will take much time and effort, Machine Learning is something that is quite enjoyable, and in the docs we also go over the way it is evolving with our Network. </p>
 <p>This is meant to give a blueprint for workflow within the prompting Network, so although I have yet to access things, either contact my by pulling this repo or hit my line on Discord. I am willing to further my knowledge and begin understanding how prompting works if somebody is willing to teach me such things. </p>
@@ -156,11 +156,11 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="generate_signature.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="linux_basics.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="introduction.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="generate_signature.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -170,11 +170,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="generate_signature.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="linux_basics.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="introduction.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="generate_signature.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
