--- a/book/print.html
+++ b/book/print.html
@@ -180,7 +180,7 @@
 <p>In summary, using the Windows Subsystem for Linux (WSL) to interact with the Bittensor Network offers a range of benefits, including an enhanced developer experience, consistent cross-platform development, simplified setup and configuration, and improved security. By leveraging the power of both Windows and Linux, WSL allows you to work efficiently with the Bittensor Network, ultimately helping you to create more reliable and secure machine learning models in a decentralized environment.</p>
 <p>To conclude here, I want to state <strong>the most important skill</strong> for somebody to have when beginning with Bittensor, even just as a client: Computer Science. You're going to have to learn about Linux, you're going to have to learn about Python scripting - and that's okay. It'll take some time, but if you have ChatGPT or something similar, then you should be able to figure things out just fine. How do you think I wrote these documents? Ain't no way..</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="linux_basics"><a class="header" href="#linux_basics">Linux_Basics</a></h1>
-<h3 id="i-must-note-the-importance-of-being-comfortable-navigating-linux-and-reading-code-when-it-comes-to-developing-on-the-bittensor-network-rust-is-also-a-good-language-for-documentation-as-it-is-easy-to-lose-track-of-all-the-knowledge-acquired-at-some-point-it-will-become-second-nature---you-will-remember-what-cat-does-what-a-pipe-isexample--grep-and-you-will-understand-how-to-use-wsl-speaking-of-wsl-you-should-refer-to-the-why-wsl-section-of-the-docs"><a class="header" href="#i-must-note-the-importance-of-being-comfortable-navigating-linux-and-reading-code-when-it-comes-to-developing-on-the-bittensor-network-rust-is-also-a-good-language-for-documentation-as-it-is-easy-to-lose-track-of-all-the-knowledge-acquired-at-some-point-it-will-become-second-nature---you-will-remember-what-cat-does-what-a-pipe-isexample--grep-and-you-will-understand-how-to-use-wsl-speaking-of-wsl-you-should-refer-to-the-why-wsl-section-of-the-docs"><strong>I must note the importance of being comfortable navigating Linux and reading code when it comes to developing on the Bittensor Network. Rust is also a good language for documentation, as it is easy to lose track of all the knowledge acquired. At some point, it will become second nature - you will remember what cat does, what a pipe is(example | grep), and you will understand how to use WSL. Speaking of WSL, you should refer to the &quot;Why WSL&quot; section of the Docs.</strong></a></h3>
+<h5 id="i-must-note-the-importance-of-being-comfortable-navigating-linux-and-reading-code-when-it-comes-to-developing-on-the-bittensor-network-rust-is-also-a-good-language-for-documentation-as-it-is-easy-to-lose-track-of-all-the-knowledge-acquired-at-some-point-it-will-become-second-nature---you-will-remember-what-cat-does-what-a-pipe-isexample--grep-and-you-will-understand-how-to-use-wsl-speaking-of-wsl-you-should-refer-to-the-before-you-build-section-of-the-docs"><a class="header" href="#i-must-note-the-importance-of-being-comfortable-navigating-linux-and-reading-code-when-it-comes-to-developing-on-the-bittensor-network-rust-is-also-a-good-language-for-documentation-as-it-is-easy-to-lose-track-of-all-the-knowledge-acquired-at-some-point-it-will-become-second-nature---you-will-remember-what-cat-does-what-a-pipe-isexample--grep-and-you-will-understand-how-to-use-wsl-speaking-of-wsl-you-should-refer-to-the-before-you-build-section-of-the-docs"><strong>I must note the importance of being comfortable navigating Linux and reading code when it comes to developing on the Bittensor Network. Rust is also a good language for documentation, as it is easy to lose track of all the knowledge acquired. At some point, it will become second nature - you will remember what cat does, what a pipe is(example | grep), and you will understand how to use WSL. Speaking of WSL, you should refer to the &quot;before you build&quot; section of the Docs.</strong></a></h5>
 <ul>
 <li><code>ls</code>: list files in the current directory</li>
 <li><code>cd</code>: change directory</li>
@@ -244,17 +244,43 @@
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="the-following-is-a-summary-of-the-skills-one-may-need-to-learn-as-they-progress-through-their-journey-here"><a class="header" href="#the-following-is-a-summary-of-the-skills-one-may-need-to-learn-as-they-progress-through-their-journey-here">The following is a summary of the skills one may need to learn as they progress through their journey here.</a></h2>
 <p><strong>It should be noted that the field is constantly evolving and shifting, but there is still a baseline.</strong></p>
-<h1 id="to-operate-effectively-on-the-bittensor-network-an-individual-would-need-a-diverse-set-of-skills-that-cover-the-technical-conceptual-and-practical-aspects-of-the-platform-some-of-the-key-skills-include"><a class="header" href="#to-operate-effectively-on-the-bittensor-network-an-individual-would-need-a-diverse-set-of-skills-that-cover-the-technical-conceptual-and-practical-aspects-of-the-platform-some-of-the-key-skills-include">To operate effectively on the Bittensor network, an individual would need a diverse set of skills that cover the technical, conceptual, and practical aspects of the platform. Some of the key skills include:</a></h1>
+<p><strong>To operate effectively on the Bittensor network, an individual would need a diverse set of skills that cover the technical, conceptual, and practical aspects of the platform.</strong></p>
+<h1 id="bittensor-skillset-overview"><a class="header" href="#bittensor-skillset-overview">Bittensor Skillset Overview</a></h1>
+<p>The following summary outlines the essential skills for anyone looking to effectively contribute to the Bittensor network. The field is constantly evolving and shifting; however, these foundational skills provide a solid starting point.</p>
+<h2 id="essential-skills-for-bittensor-network-operations"><a class="header" href="#essential-skills-for-bittensor-network-operations">Essential Skills for Bittensor Network Operations</a></h2>
+<p>To succeed in the Bittensor ecosystem, individuals should possess a diverse set of skills, covering technical, conceptual, and practical aspects of the platform. Some key skills include:</p>
 <ol>
-<li><strong>Python Programming</strong>: Proficiency in Python is essential, as the Bittensor library is written in Python.</li>
-<li><strong>Machine Learning</strong>: Familiarity with machine learning concepts, particularly deep learning and natural language processing, is important to build and deploy models on the network.</li>
-<li><strong>PyTorch</strong>: Knowledge of the PyTorch library, as Bittensor utilizes it for building and training models.</li>
-<li><strong>Distributed Systems</strong>: Understanding of distributed computing concepts to effectively work with the decentralized nature of Bittensor.</li>
-<li><strong>Cryptography and Blockchain</strong>: Familiarity with cryptography and blockchain technology, as the Bittensor network relies on these concepts for security and consensus.</li>
-<li><strong>APIs and Networking</strong>: Experience working with APIs and networking protocols, since Bittensor involves communication between nodes in the network.</li>
-<li><strong>Problem Solving and Debugging</strong>: Strong problem-solving and debugging skills to identify and fix issues in a complex environment.</li>
-<li><strong>Documentation and Communication</strong>: Ability to read and understand technical documentation and effectively communicate with other developers and users on the Bittensor platform.</li>
+<li><strong>Python Programming</strong></li>
 </ol>
+<p>Proficiency in Python is crucial since the Bittensor library is primarily written in Python.</p>
+<ol start="2">
+<li><strong>Machine Learning</strong></li>
+</ol>
+<p>A strong understanding of machine learning concepts, particularly deep learning and natural language processing, is essential for building and deploying models on the network.</p>
+<ol start="3">
+<li><strong>PyTorch</strong></li>
+</ol>
+<p>Familiarity with the PyTorch library is necessary, as Bittensor utilizes it for constructing and training models.</p>
+<ol start="4">
+<li><strong>Distributed Systems</strong></li>
+</ol>
+<p>An understanding of distributed computing concepts is crucial for working effectively with the decentralized nature of Bittensor.</p>
+<ol start="5">
+<li><strong>Cryptography and Blockchain</strong></li>
+</ol>
+<p>Knowledge of cryptography and blockchain technology is vital, as the Bittensor network relies on these concepts for security and consensus.</p>
+<ol start="6">
+<li><strong>APIs and Networking</strong></li>
+</ol>
+<p>Experience working with APIs and networking protocols is essential, given Bittensor's reliance on communication between nodes in the network.</p>
+<ol start="7">
+<li><strong>Problem Solving and Debugging</strong></li>
+</ol>
+<p>Strong problem-solving and debugging skills are necessary to identify and address issues in a complex environment.</p>
+<ol start="8">
+<li><strong>Documentation and Communication</strong></li>
+</ol>
+<p>The ability to read and comprehend technical documentation, as well as effectively communicate with other developers and users on the Bittensor platform, is crucial for success in this ecosystem.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="introduction-to-rlhfreinforcement-learning-from-human-feedback"><a class="header" href="#introduction-to-rlhfreinforcement-learning-from-human-feedback">Introduction to RLHF(Reinforcement Learning from Human Feedback)</a></h1>
 <p>There's a good article on <a href="https://huggingface.co/blog/rlhf">HuggingFace</a> about this subject, but tl;dr: </p>
 <p>By interacting with the AI and fine-tuning it towards a particular use-case, you can build good models. If you can build good models, you can be rewarded by the Bittensor Network. Part of the reason it's so competitive here is because the information has long been understood by the people with long-standing, but they're busy. Anybody who works within this ecosystem can tell you two things:</p>
@@ -507,7 +533,7 @@ Running a backward pass through the model using mean squared error between norma
 <p>To use the gating model, a user would first create an instance of the GatingModel class with the desired configuration and then run the forward and backward methods for their specific use case.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="code-summary-of"><a class="header" href="#code-summary-of">Code Summary of</a></h1>
 <p><code>_neuron/text/core_validator/__init__.py</code></p>
-<p>This Python script defines a class called <code>neuron</code> that acts as a core component in a distributed machine learning network. It is responsible for managing the network communication, the model training, and the reward distribution among peers. </p>
+<p><strong>This Python script defines a class called neuron that acts as a core component in a distributed machine learning network. It is responsible for managing the network communication, the model training, and the reward distribution among peers.</strong> </p>
 <h2 id="key-components"><a class="header" href="#key-components">Key Components</a></h2>
 <h3 id="constants"><a class="header" href="#constants">Constants</a></h3>
 <ul>
@@ -775,7 +801,8 @@ viii.Reset the metagraph.</p>
 </ul>
 <p>By using the <code>Keyfile</code> and <code>MockKeyfile</code> classes, developers can easily manage keyfiles and their associated keypairs, ensuring proper encryption and access control for secure Bittensor operations.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="genesistextdataset"><a class="header" href="#genesistextdataset">GenesisTextDataset</a></h1>
-<h2 id="this-is-a-summary-of-functions-found-within---bittensorbittensor_datasetdataset_implpy"><a class="header" href="#this-is-a-summary-of-functions-found-within---bittensorbittensor_datasetdataset_implpy">This is a summary of Functions found within - <code>bittensor/bittensor/_dataset/dataset_impl.py</code></a></h2>
+<h2 id="this-is-a-summary-of-functions-found-within--"><a class="header" href="#this-is-a-summary-of-functions-found-within--">This is a summary of Functions found within -</a></h2>
+<p><code>bittensor/bittensor/_dataset/dataset_impl.py</code></p>
 <h2 id="to-give-a-high-level-overview-of-what-this-script-does"><a class="header" href="#to-give-a-high-level-overview-of-what-this-script-does"><strong>To give a high level overview of what this script does:</strong></a></h2>
 <p><code>GenesisTextDataset</code> is a class designed to handle text datasets for training language models. It uses IPFS (InterPlanetary File System) as a source for the text data and allows the user to load data from IPFS or a local directory. It provides methods to create a PyTorch DataLoader, reserve text data, and update the data size.</p>
 <h2 id="key-functions"><a class="header" href="#key-functions">Key Functions</a></h2>
