--- a/book/response_codes.html
+++ b/book/response_codes.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - TaoDocs</title>
-        <base href="/">
+        <title>Response Codes - TaoDocs</title>
 
 
         <!-- Custom HTML head -->
@@ -84,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.1.</strong> ReadMe</a></li><li class="chapter-item expanded "><a href="init.html"><strong aria-hidden="true">1.2.</strong> How should I read this?</a></li><li class="chapter-item expanded "><a href="Glossary.html"><strong aria-hidden="true">1.3.</strong> Basic Terminology</a></li><li class="chapter-item expanded "><a href="TheDataset.html"><strong aria-hidden="true">1.4.</strong> The Mountain</a></li><li class="chapter-item expanded "><a href="client_commands.html"><strong aria-hidden="true">1.5.</strong> Btcli Basics</a></li><li class="chapter-item expanded "><a href="delegation.html"><strong aria-hidden="true">1.6.</strong> Delegation Explanation</a></li><li class="chapter-item expanded "><a href="taonomics.html"><strong aria-hidden="true">1.7.</strong> TaoNomics</a></li></ol></li><li class="chapter-item expanded "><a href="baseline_skills.html"><strong aria-hidden="true">2.</strong> The Skills You'll Need</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rlhf.html"><strong aria-hidden="true">2.1.</strong> How to train an LLM?</a></li><li class="chapter-item expanded "><a href="md_book.html"><strong aria-hidden="true">2.2.</strong> Learn to write Documentation!</a></li><li class="chapter-item expanded "><a href="before_you_build.html"><strong aria-hidden="true">2.3.</strong> For Windows Users</a></li><li class="chapter-item expanded "><a href="Linux_basics.html"><strong aria-hidden="true">2.4.</strong> Linux Basics</a></li><li class="chapter-item expanded "><a href="md_book.html"><strong aria-hidden="true">2.5.</strong> A Guide to Writing Documentation</a></li></ol></li><li class="chapter-item expanded "><a href="finney.html"><strong aria-hidden="true">3.</strong> Finney and Prompting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="prompting_examples.html"><strong aria-hidden="true">3.1.</strong> Explanation of Prompt Scripts</a></li><li class="chapter-item expanded "><a href="prompting_example2.html"><strong aria-hidden="true">3.2.</strong> More Prompting Examples</a></li></ol></li><li class="chapter-item expanded "><a href="generate_signature.html"><strong aria-hidden="true">4.</strong> Information for Validation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="verify_signature.html"><strong aria-hidden="true">4.1.</strong> Verify Validator</a></li><li class="chapter-item expanded "><a href="gating_model.html"><strong aria-hidden="true">4.2.</strong> Gating Model</a></li><li class="chapter-item expanded "><a href="neuron.html"><strong aria-hidden="true">4.3.</strong> Neurons</a></li><li class="chapter-item expanded "><a href="core_validator_init.html"><strong aria-hidden="true">4.4.</strong> Core Validator Explanation</a></li><li class="chapter-item expanded "><a href="consensus.html"><strong aria-hidden="true">4.5.</strong> What is Consensus?</a></li></ol></li><li class="chapter-item expanded "><a href="Fine_tuning.html"><strong aria-hidden="true">5.</strong> Fine Tuning Examples/Mining</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="mining_models.html"><strong aria-hidden="true">5.1.</strong> Base Mining Models?</a></li><li class="chapter-item expanded "><a href="epochs.html"><strong aria-hidden="true">5.2.</strong> What's an Epoch?</a></li><li class="chapter-item expanded "><a href="miner_commands.html"><strong aria-hidden="true">5.3.</strong> Miner Commands</a></li><li class="chapter-item expanded "><a href="miner_analysis.html"><strong aria-hidden="true">5.4.</strong> Analysis of a Miner Template</a></li><li class="chapter-item expanded "><a href="Why_Cuda.html"><strong aria-hidden="true">5.5.</strong> Cuda PoW</a></li><li class="chapter-item expanded "><a href="keyfile_impl.html"><strong aria-hidden="true">5.6.</strong> Managing Keys</a></li><li class="chapter-item expanded "><a href="bounty_system.html"><strong aria-hidden="true">5.7.</strong> The Bounty System</a></li></ol></li><li class="chapter-item expanded "><a href="dataset_impl.html"><strong aria-hidden="true">6.</strong> GenesisTextDataSet and more on Data</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="dataset_mock.html"><strong aria-hidden="true">6.1.</strong> Mock DataSet</a></li><li class="chapter-item expanded "><a href="_logging_init.html"><strong aria-hidden="true">6.2.</strong> Looking at Logs</a></li><li class="chapter-item expanded "><a href="return_codes.html"><strong aria-hidden="true">6.3.</strong> Return Codes</a></li><li class="chapter-item expanded "><a href="response_codes.html"><strong aria-hidden="true">6.4.</strong> Response Codes</a></li><li class="chapter-item expanded "><a href="metagraph_impl.html"><strong aria-hidden="true">6.5.</strong> What's a MetaGraph?</a></li></ol></li><li class="chapter-item expanded "><a href="networking.html"><strong aria-hidden="true">7.</strong> Networking</a></li><li class="chapter-item expanded "><a href="registration.html"><strong aria-hidden="true">8.</strong> Registration</a></li><li class="chapter-item expanded "><a href="axon_init.html"><strong aria-hidden="true">9.</strong> Axons</a></li><li class="chapter-item expanded "><a href="dendrite_impl.html"><strong aria-hidden="true">10.</strong> Dendrites</a></li><li class="chapter-item expanded "><a href="prometheus_init.html"><strong aria-hidden="true">11.</strong> The Prometheus Module</a></li><li class="chapter-item expanded "><a href="receptor_impl.html"><strong aria-hidden="true">12.</strong> Receptors</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.1.</strong> ReadMe</a></li><li class="chapter-item expanded "><a href="init.html"><strong aria-hidden="true">1.2.</strong> How should I read this?</a></li><li class="chapter-item expanded "><a href="Glossary.html"><strong aria-hidden="true">1.3.</strong> Basic Terminology</a></li><li class="chapter-item expanded "><a href="TheDataset.html"><strong aria-hidden="true">1.4.</strong> The Mountain</a></li><li class="chapter-item expanded "><a href="client_commands.html"><strong aria-hidden="true">1.5.</strong> Btcli Basics</a></li><li class="chapter-item expanded "><a href="delegation.html"><strong aria-hidden="true">1.6.</strong> Delegation Explanation</a></li><li class="chapter-item expanded "><a href="taonomics.html"><strong aria-hidden="true">1.7.</strong> TaoNomics</a></li></ol></li><li class="chapter-item expanded "><a href="baseline_skills.html"><strong aria-hidden="true">2.</strong> The Skills You'll Need</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rlhf.html"><strong aria-hidden="true">2.1.</strong> How to train an LLM?</a></li><li class="chapter-item expanded "><a href="md_book.html"><strong aria-hidden="true">2.2.</strong> Learn to write Documentation!</a></li><li class="chapter-item expanded "><a href="before_you_build.html"><strong aria-hidden="true">2.3.</strong> For Windows Users</a></li><li class="chapter-item expanded "><a href="Linux_basics.html"><strong aria-hidden="true">2.4.</strong> Linux Basics</a></li><li class="chapter-item expanded "><a href="md_book.html"><strong aria-hidden="true">2.5.</strong> A Guide to Writing Documentation</a></li></ol></li><li class="chapter-item expanded "><a href="finney.html"><strong aria-hidden="true">3.</strong> Finney and Prompting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="prompting_examples.html"><strong aria-hidden="true">3.1.</strong> Explanation of Prompt Scripts</a></li><li class="chapter-item expanded "><a href="prompting_example2.html"><strong aria-hidden="true">3.2.</strong> More Prompting Examples</a></li></ol></li><li class="chapter-item expanded "><a href="generate_signature.html"><strong aria-hidden="true">4.</strong> Information for Validation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="verify_signature.html"><strong aria-hidden="true">4.1.</strong> Verify Validator</a></li><li class="chapter-item expanded "><a href="gating_model.html"><strong aria-hidden="true">4.2.</strong> Gating Model</a></li><li class="chapter-item expanded "><a href="neuron.html"><strong aria-hidden="true">4.3.</strong> Neurons</a></li><li class="chapter-item expanded "><a href="core_validator_init.html"><strong aria-hidden="true">4.4.</strong> Core Validator Explanation</a></li><li class="chapter-item expanded "><a href="consensus.html"><strong aria-hidden="true">4.5.</strong> What is Consensus?</a></li></ol></li><li class="chapter-item expanded "><a href="Fine_tuning.html"><strong aria-hidden="true">5.</strong> Fine Tuning Examples/Mining</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="mining_models.html"><strong aria-hidden="true">5.1.</strong> Base Mining Models?</a></li><li class="chapter-item expanded "><a href="epochs.html"><strong aria-hidden="true">5.2.</strong> What's an Epoch?</a></li><li class="chapter-item expanded "><a href="miner_commands.html"><strong aria-hidden="true">5.3.</strong> Miner Commands</a></li><li class="chapter-item expanded "><a href="miner_analysis.html"><strong aria-hidden="true">5.4.</strong> Analysis of a Miner Template</a></li><li class="chapter-item expanded "><a href="Why_Cuda.html"><strong aria-hidden="true">5.5.</strong> Cuda PoW</a></li><li class="chapter-item expanded "><a href="keyfile_impl.html"><strong aria-hidden="true">5.6.</strong> Managing Keys</a></li><li class="chapter-item expanded "><a href="bounty_system.html"><strong aria-hidden="true">5.7.</strong> The Bounty System</a></li></ol></li><li class="chapter-item expanded "><a href="dataset_impl.html"><strong aria-hidden="true">6.</strong> GenesisTextDataSet and more on Data</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="dataset_mock.html"><strong aria-hidden="true">6.1.</strong> Mock DataSet</a></li><li class="chapter-item expanded "><a href="_logging_init.html"><strong aria-hidden="true">6.2.</strong> Looking at Logs</a></li><li class="chapter-item expanded "><a href="return_codes.html"><strong aria-hidden="true">6.3.</strong> Return Codes</a></li><li class="chapter-item expanded "><a href="response_codes.html" class="active"><strong aria-hidden="true">6.4.</strong> Response Codes</a></li><li class="chapter-item expanded "><a href="metagraph_impl.html"><strong aria-hidden="true">6.5.</strong> What's a MetaGraph?</a></li></ol></li><li class="chapter-item expanded "><a href="networking.html"><strong aria-hidden="true">7.</strong> Networking</a></li><li class="chapter-item expanded "><a href="registration.html"><strong aria-hidden="true">8.</strong> Registration</a></li><li class="chapter-item expanded "><a href="axon_init.html"><strong aria-hidden="true">9.</strong> Axons</a></li><li class="chapter-item expanded "><a href="dendrite_impl.html"><strong aria-hidden="true">10.</strong> Dendrites</a></li><li class="chapter-item expanded "><a href="prometheus_init.html"><strong aria-hidden="true">11.</strong> The Prometheus Module</a></li><li class="chapter-item expanded "><a href="receptor_impl.html"><strong aria-hidden="true">12.</strong> Receptors</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,14 +144,43 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="response-codes"><a class="header" href="#response-codes">Response Codes</a></h1>
+<p>Occasionally you may recieve errors while mining. Refer here for translating response codes.</p>
+<p>0 - no return</p>
+<p>1 - success</p>
+<p>2 - timeout</p>
+<p>3 - backoff</p>
+<p>4 - unavailable</p>
+<p>5 - not implemented</p>
+<p>6 - you sent an empty request</p>
+<p>7 - you recieved an empty response</p>
+<p>8 - you recieved invalid response</p>
+<p>9 - you sent an invalid request</p>
+<p>10 - request shape exception</p>
+<p>11 - response shape exception</p>
+<p>12 - request serialization exception</p>
+<p>13 - response serialization exception</p>
+<p>14 - request deserialization exception</p>
+<p>15 - response deserialization exception</p>
+<p>16 - not serving nucleus</p>
+<p>17 - nucleus timeout</p>
+<p>18 - nucleus full</p>
+<p>19 - request incompatible version</p>
+<p>20 - response incompatible version</p>
+<p>21 - sender unknown</p>
+<p>22 - unkown exception</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="return_codes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next" href="metagraph_impl.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -160,7 +188,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="return_codes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next" href="metagraph_impl.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
