--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
      <meta http-equiv="refresh" content="0; URL=https://docs.taostats.io/book/" />
    </head>
    <body>
-     <p>This page has been moved. If you are not redirected automatically, click <a href="https://docs.taostats.io/book/">here</a> to go to TaoDocs.</p>
+     <p>If you are not redirected automatically, click <a href="https://docs.taostats.io/book/">here</a> to go to TaoDocs.</p>
    </body>
 </html>
